--- a/Styles.css
+++ b/Styles.css
@@ -4,4 +4,68 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
+
+/*--------------------Navigation---------------------*/
+.navigation {
+    background-color: #1f2937;
+    height: 60px;
+    color: #f9faf8;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 200px;
+}
+
+ul {
+    display: flex;
+}
+
+li {
+    list-style: none;
+    padding: 5px 10px;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.header-logo {
+    font-size: 24px;
+}
+
+
+
+/*--------------------Header---------------------*/
+
+header {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.header-content {
+    display: flex;
+    padding: 50px 200px;
+}
+
+.left-side {
+    max-width: 500px;
+}
+
+button {
+    border: none;
+    border-radius: 5px;
+    background-color: #3882f6;
+    color: #f8faf8;
+    width: 100px;
+    height: 30px;
+    font-size: 18px;
+    text-align: center;
+}
+
+.page-header {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
