--- a/Styles.css
+++ b/Styles.css
@@ -35,6 +35,11 @@ li {
     font-size: 24px;
 }
 
+a {
+    text-decoration: none;
+    color: #e5e7eb;
+}
+
 
 
 /*--------------------Header---------------------*/
@@ -70,6 +75,7 @@ button {
     height: 30px;
     font-size: 18px;
     text-align: center;
+    cursor: pointer;
 }
 
 .sign-up-btn {
@@ -102,6 +108,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 100px;
 }
 
 .section-heading {
@@ -126,4 +133,28 @@ button {
     text-align: center;
     color: #1f2937;
     margin-top: 5px;
+}
+
+
+/*--------------------Quote---------------------*/
+
+.quote {
+    font-size: 36px;
+    color: #1f2937;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    padding: 100px 0;
+}
+
+.quote-text {
+    width: 1000px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.quote-author {
+    font-weight: bold;
+    margin-left: 600px;
 }
