--- a/Styles.css
+++ b/Styles.css
@@ -157,4 +157,48 @@ button {
 .quote-author {
     font-weight: bold;
     margin-left: 600px;
+    font-size: 18px;
+}
+
+
+
+/*--------------------Call to Action---------------------*/
+
+.call-to-action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 100px 0;
+}
+
+.section-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 1000px;
+    height: 50px; 
+    background-color: #3882f6;
+    padding: 50px 100px;
+    font-size: 18px;
+    color: #fff;
+    border-radius: 15px;
+}
+
+.sign-up-btn-2 {
+    border: 1px solid #fff;
+    border-radius: 5px;
+}
+
+
+
+/*--------------------Footer---------------------*/
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #fff;
+    height: 75px;
+    font-size: 18px;
 }
